--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,8 @@
 ﻿<html>
 <body>
+	<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.0-latest.js"></script>
     <script src="libs/jquery-1.11.2.js"></script>
     <script src="popup.js"></script>
+	<button id="write-button"></button>
 </body>
 </html>
