--- a/drop-down.html
+++ b/drop-down.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <body>
-    <button id="partial">Partail</button>
-    <button id="full-screen">Full screen</button>
+    <button id="partial">Caprute part of screen</button>
+    <button id="full-screen">Caprute full screen</button>
 </body>
 </html>
 
